Add a filter suitable for converting MeOS's output from running in WINE
It's a pretty ugly hack, but it works well and gives nicely formatted output.  Leave all the printer settings in MeOS to the defaults

--- a/src/cups/Makefile
+++ b/src/cups/Makefile
@@ -63,6 +63,7 @@ clean:
 
 install:
 	$(INSTALL) -s martel $(backenddir)
+	$(INSTALL) meostomartel $(filterdir)
 	$(INSTALL) -s rastertomartel $(filterdir)
 	$(INSTALL) -s texttomartel $(filterdir)
 	
